# erp_tender

./: city.csv  city2.csv  company.csv  config.py  db.sqlite3  encoding.py  group.csv  main.py  manage.py  organizations.csv  postav.csv  price2.csv  pyproject.toml  region.csv  safe8.csv  tmc.csv
erp_tender/: asgi.py  settings.py  urls.py  wsgi.py
templates/: adaptive.html  arhiv_z.html  chat_bot.html  cit.html  controlprod.html  dealer.html  error.html  evt.html  footer.html  gruz.html  header.html  home2.html  info.html  info_detail.html  pdf.html  peny.html  pereschet.html  poisk.html  poisk_tasks.html  poisk_tasks_arhiv_z.html  postavschiki.html  rentab.html  result.html  result_peny.html  task.html  tender.html  tur.html  ucenka.html  zakaz.html
templates/tender/: index.html
tender/: admin.py  apps.py  models.py  services.py  urls.py  utils.py  views.py
tender/migrations/: 0001_initial.py  0002_city_region_alter_type_tender_options.py  0003_alter_city_options_city_region.py  0004_alter_type_tender_options_type_tender_nomer.py  0005_company_alter_type_tender_nomer_dealer.py  0006_client_filial_product_staffer_alter_dealer_options_and_more.py  0007_rename_dialer_tab_dealer.py  0008_alter_tab_number_tender_alter_tab_safe_alter_tab_win.py  0009_alter_client_inn_alter_company_inn.py  0010_alter_tab_dealer_alter_tab_price2.py  0011_alter_tab_price2.py  0012_rename_safe_tab_protection_protection.py  0013_alter_protection_options_alter_tab_options.py  0014_alter_city_region_alter_client_city_and_more.py  0015_alter_city_region_alter_dealer_company_and_more.py  (+1 more)
(+2 files in other folders)
